fix: styles for Hubspot btns on mobile

--- a/apps/web/src/features/hypernative/components/HnSignupFlow/styles.module.css
+++ b/apps/web/src/features/hypernative/components/HnSignupFlow/styles.module.css
@@ -35,7 +35,15 @@
 
 .cancelButtonWrapper {
   z-index: 1;
-  margin-top: -86px;
+  margin-top: -80px;
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
+  .cancelButtonWrapper {
+    margin-top: -63px;
+  }
 }
 
 .cancelButton {
